# library-backend

./: .gitignore  Cargo.toml  README.md  build.sh  lefthook.yml
apps/catalog/: Cargo.toml
apps/catalog/src/: lib.rs
apps/catalog/src/application/: get_book.rs  list_books.rs  mod.rs
apps/catalog/src/domain/: book.rs  error.rs  filter.rs  mod.rs  pagination.rs  repository.rs
apps/catalog/src/infrastructure/: in_memory.rs  mod.rs  seaorm.rs  seed.rs
apps/catalog/src/presentation/: dto.rs  http.rs  mod.rs
apps/chat/: Cargo.toml
apps/chat/src/: lib.rs
apps/chat/src/application/: list_history.rs  mod.rs  post_message.rs
apps/chat/src/domain/: error.rs  message.rs  mod.rs  pagination.rs  ports.rs
apps/chat/src/infrastructure/: in_memory_messages.rs  mod.rs  room_hub.rs  seaorm_messages.rs
apps/chat/src/presentation/: dto.rs  http.rs  mod.rs  ws.rs
apps/gateway/: Cargo.toml
apps/gateway/src/: catalog_bridge.rs  lib.rs  loan_source_bridge.rs  main.rs
apps/gateway/src/presentation/: health.rs  mod.rs  recommend.rs
apps/iam/: Cargo.toml
apps/iam/src/: lib.rs
apps/iam/src/application/: assign_role.rs  change_password.rs  create_user.rs  delete_me.rs  delete_user.rs  forgot_password.rs  get_current_user.rs  list_users.rs  login_user.rs  mod.rs  register_user.rs  reset_password.rs  update_me.rs  update_user.rs  validation.rs  verify_email.rs
apps/iam/src/domain/: email_token.rs  error.rs  mod.rs  pagination.rs  ports.rs  principal.rs  role.rs  user.rs
apps/iam/src/infrastructure/: argon2_hasher.rs  config.rs  fake_email_sender.rs  in_memory_email_tokens.rs  in_memory_users.rs  jwt.rs  mod.rs  resend_email_sender.rs  seaorm_email_tokens.rs  seaorm_users.rs  token_generator.rs
apps/iam/src/presentation/: dto.rs  http.rs  mod.rs
apps/lending/: Cargo.toml
apps/lending/src/: lib.rs
apps/lending/src/application/: approve_loan.rs  borrow_book.rs  list_loans.rs  mod.rs  return_loan.rs
apps/lending/src/domain/: error.rs  loan.rs  mod.rs  pagination.rs  ports.rs  status.rs
apps/lending/src/infrastructure/: in_memory_loans.rs  mod.rs  seaorm_loans.rs  system_clock.rs
apps/lending/src/presentation/: dto.rs  http.rs  mod.rs
apps/migration/: Cargo.toml
apps/migration/src/: lib.rs  m20260615_000001_create_books_table.rs  m20260615_000002_create_users_table.rs  m20260615_000003_create_loans_table.rs  m20260615_000004_create_chat_messages_table.rs  m20260615_000005_create_notification_tables.rs  m20260615_000006_create_email_tokens_table.rs  m20260615_000007_add_user_iam_v2_columns.rs  m20260615_000008_active_loan_unique_index.rs
apps/migration/src/entity/: chat_message.rs  device.rs  mod.rs
apps/notification/: Cargo.toml
apps/notification/src/: lib.rs
apps/notification/src/application/: list_notifications.rs  mod.rs  register_device.rs  run_reminder_scan.rs  scheduler.rs
apps/notification/src/domain/: device.rs  due_loan.rs  error.rs  mod.rs  pagination.rs  ports.rs  reminder.rs
apps/notification/src/infrastructure/: config.rs  fake_push_sender.rs  fcm_push_sender.rs  in_memory_devices.rs  in_memory_reminders.rs  mod.rs  seaorm_devices.rs  seaorm_reminders.rs
apps/notification/src/presentation/: dto.rs  http.rs  mod.rs
apps/persistence/: Cargo.toml
apps/persistence/src/: db.rs  lib.rs
apps/persistence/src/entity/: book.rs  email_token.rs  loan.rs  mod.rs  reminder.rs  user.rs
apps/recommender/: Cargo.toml
apps/recommender-ffi/: Cargo.toml
apps/recommender-ffi/src/: dto.rs  engine.rs  error.rs  lib.rs
apps/recommender/src/: domain.rs  lib.rs  ranking.rs
contract/: openapi.yaml
docs/: README.md
docs/adr/: 0001-merge-core-into-backend-backend.md  0002-hexagonal-clean-architecture-backend.md  0003-axum-postgres-over-edge-backend.md  0004-contract-first-openapi-backend.md  0005-recommender-pure-crate-split-backend.md  0006-chat-and-notification-patterns-backend.md  0007-partial-index-exception.md
docs/fsd/: 001-functional-spec-backend.md
docs/plan/: 001-implementation-plan-backend.md
docs/prd/: 001-product-requirements-backend.md
docs/sow/: 001-initial-scope-backend.md
