[workspace]
resolver = "2"
members = ["apps/*"]

# Single source of truth for the workspace version. Every crate inherits this
# via `version.workspace = true` so the polyrepo stays on one version line.
[workspace.package]
version = "1.2.0"
edition = "2021"
license = "MIT"

[workspace.dependencies]
axum = "0.8"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
uuid = { version = "1", features = ["serde", "v4"] }
chrono = { version = "0.4", features = ["serde"] }
