[package]
name = "catalog"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
axum.workspace = true
serde.workspace = true
uuid = { workspace = true }
async-trait = "0.1"
persistence = { path = "../persistence" }

[dev-dependencies]
tokio.workspace = true
tower = { version = "0.5", features = ["util"] }
http-body-util = "0.1"
serde_json = "1"
