[package]
name = "gateway"
version.workspace = true
edition.workspace = true
license.workspace = true

# Composition root: a lib (so the router is unit-testable) plus a thin bin that
# binds a TCP listener and serves it.
[lib]
name = "gateway"
path = "src/lib.rs"

[[bin]]
name = "gateway"
path = "src/main.rs"

[dependencies]
axum.workspace = true
tokio.workspace = true
serde.workspace = true
catalog = { path = "../catalog" }

[dev-dependencies]
tower = { version = "0.5", features = ["util"] }
http-body-util = "0.1"
