[package]
name = "notification"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
axum.workspace = true
tokio = { workspace = true }
serde.workspace = true
serde_json = "1"
uuid = { workspace = true }
chrono = { workspace = true }
async-trait = "0.1"
# Reuses IAM auth for device registration + notification history.
iam = { path = "../iam" }
# Real FCM adapter (HTTP v1). rustls so no system OpenSSL is required.
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }

[dev-dependencies]
tower = { version = "0.5", features = ["util"] }
http-body-util = "0.1"
